--- a/src/app/components/add-listing/add-listing.component.css
+++ b/src/app/components/add-listing/add-listing.component.css
@@ -1,102 +1,115 @@
 .listing-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-  }
-  
-  .listing-content {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 90%;
-    max-width: 600px;
-    max-height: 90%;
-    overflow-y: auto;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 20;
-    transform: translate(-50%, -50%);
-  }
-  
-  h2 {
-    margin-top: 0;
-  }
-  
-  form div {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input[type="checkbox"],
-  select {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
 
-  input,
-  textarea {
-    width: calc(100% - 12px);
-    padding: 6px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+.listing-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 600px;
+  max-height: 90%;
+  overflow-y: auto;
+  box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
+  z-index: 20;
+  transform: translate(-50%, -50%);
+}
 
-  .listing-content form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .listing-content label {
-    margin-top: 10px;
-  }
+h2 {
+  margin-top: 0;
+}
 
-  .checkbox-group {
-    display: flex;
-    justify-content:space-evenly;
-  }
-  
-  .checkbox-group label {
-    margin-right: 10px;
-  }
+form div {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type='checkbox'],
+select {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input,
+textarea {
+  font-size: 16px;
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.listing-content form {
+  display: flex;
+  flex-direction: column;
+}
+
+.listing-content label {
+  margin-top: 10px;
+}
+
+.checkbox-group {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.checkbox-group label {
+  margin-right: 10px;
+}
 
 /* Center the buttons and add space between them */
 .form-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px; /* Space between buttons */
+  gap: 15px;
+
+  /* Space between buttons */
   margin-top: 20px;
 }
 
 ::ng-deep .cancel-button {
-  background-color: rgb(200, 200, 200);
+  background-color: rgb(200 200 200);
   border: black;
   color: black;
 }
 
 ::ng-deep .cancel-button:hover {
-  background-color: rgb(180, 180, 180);
+  background-color: rgb(180 180 180);
+}
+
+.close-button {
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  color: #333;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  z-index: 30;
+}
+
+.close-button:hover {
+  color: #f00;
 }
