--- a/src/app/components/listing-details/listing-details.component.css
+++ b/src/app/components/listing-details/listing-details.component.css
@@ -1,80 +1,79 @@
 .listing-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 10;
-  }
-  
-  .listing-content {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    padding: 30px;
-    border-radius: 10px;
-    z-index: 20;
-    max-width: 600px;
-    width: 90%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    overflow-y: auto;
-    max-height: 90vh;
-  }
-  
-  h2 {
-    margin-top: 0;
-    text-align: center;
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .listing-info-container {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .info-item {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 15px;
-    border-bottom: 1px solid #eee;
-  }
-  
-  .label {
-    font-weight: bold;
-    color: #555;
-    margin-right: 10px;
-    font-size: 16px;
-  }
-  
-  .info-item span:last-child {
-    color: #333;
-    font-size: 16px;
-    text-align: right;
-  }
-  
-  .info-item span {
-    display: block;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(0 0 0 / 50%);
+  z-index: 10;
+}
 
-  .close-button {
-    background: transparent;
-    border: none;
-    font-size: 24px;
-    color: #333;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    z-index: 30;
-  }
-  
-  .close-button:hover {
-    color: #ff0000; /* Change color on hover for better visibility */
-  }
-  
+.listing-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  z-index: 20;
+  max-width: 600px;
+  width: 90%;
+  box-shadow: 0 2px 10px rgb(0 0 0 / 20%);
+  overflow-y: auto;
+  max-height: 90vh;
+}
+
+h2 {
+  margin-top: 0;
+  text-align: center;
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.listing-info-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.info-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 15px;
+  border-bottom: 1px solid #eee;
+}
+
+.label {
+  font-weight: bold;
+  color: #555;
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+.info-item span {
+  display: block;
+}
+
+.info-item span:last-child {
+  color: #333;
+  font-size: 16px;
+  text-align: right;
+}
+
+.close-button {
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  color: #333;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  z-index: 30;
+}
+
+.close-button:hover {
+  color: #f00;
+}
