--- a/src/app/components/my-listing-edit/my-listing-edit.component.css
+++ b/src/app/components/my-listing-edit/my-listing-edit.component.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(0 0 0 / 50%);
   z-index: 10;
 }
 
@@ -19,7 +19,7 @@
   z-index: 20;
   max-width: 600px;
   width: 90%;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 10px rgb(0 0 0 / 20%);
   overflow-y: auto;
   max-height: 90vh;
 }
@@ -56,16 +56,17 @@ h2 {
 
 .info-item input,
 .info-item select {
-  position:absolute;
+  position: absolute;
   width: 50%;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 14px;
-  right: 10px;
+  right: 20px;
 }
 
 .info-item input[type="checkbox"] {
+  right: 25%;
   width: auto;
   margin-left: 10px;
   transform: scale(1.2);
@@ -76,7 +77,9 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px; /* Space between buttons */
+  gap: 15px;
+
+  /* Space between buttons */
   margin-top: 20px;
 }
 
@@ -101,21 +104,27 @@ button {
   z-index: 30;
 }
 
+.close-button:hover {
+  color: #f00;
+
+  /* Change color on hover for better visibility */
+}
+
 ::ng-deep .cancel-button {
-  background-color: rgb(200, 200, 200);
+  background-color: rgb(200 200 200);
   border: black;
   color: black;
 }
 
 ::ng-deep .cancel-button:hover {
-  background-color: rgb(180, 180, 180);
+  background-color: rgb(180 180 180);
 }
 
 ::ng-deep .delete-button {
-  background-color: rgb(200, 0, 0);
+  background-color: rgb(200 0 0);
   border: transparent;
 }
 
 ::ng-deep .delete-button:hover {
-  background-color: rgb(180, 0, 0);
+  background-color: rgb(180 0 0);
 }
