--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -31,7 +31,7 @@
 .logout-button {
   background-color: #D9D9D9;
   color: black;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 2px rgb(0 0 0 / 30%);
 }
 
 .logout-button:hover {
@@ -70,59 +70,22 @@
   font-size: 14px;
 }
 
-/* Listing Boxes */
 .listing-boxes {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
 }
 
-.box {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 15px;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.box:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}
-
-.home-icon {
-  font-size: 24px;
-  margin-right: 10px;
-  color: #007bff;
-}
-
-.listing-details {
-  display: flex;
-  flex-direction: column;
-}
-
-.listing-title {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  color: #333;
-}
-
-.listing-info {
-  font-size: 14px;
-  color: #666;
-}
-
 /* Pagination */
 .pagination {
   display: flex;
   justify-content: center;
-  margin-top: auto; /* Pushes the pagination to the bottom */
-  padding: 20px 0;  /* Adds padding to give some space */
+  margin-top: auto;
+
+  /* Pushes the pagination to the bottom */
+  padding: 20px 0;
+
+  /* Adds padding to give some space */
 }
 
 .pagination button {
