--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
+@import url('primeng/resources/themes/lara-light-blue/theme.css');
+@import url('primeng/resources/primeng.css');
 
-body, html {
-    margin: 0;
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
