--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -23,13 +23,13 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #1081C7;
+  background-color: #1081c7;
   color: #fff;
   transition: background-color 0.3s ease;
 }
 
 .logout-button {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
   color: black;
   box-shadow: 0 2px 2px rgb(0 0 0 / 30%);
 }
@@ -40,7 +40,7 @@
 }
 
 .top-bar-button:hover {
-  background-color: #084F8C;
+  background-color: #084f8c;
 }
 
 /* Search Bar */
@@ -94,14 +94,14 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #1081C7;
+  background-color: #1081c7;
   color: #fff;
   margin: 0 5px;
   transition: background-color 0.3s ease;
 }
 
 .pagination button:hover {
-  background-color: #084F8C;
+  background-color: #084f8c;
 }
 
 .pagination span {
