--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -8,105 +8,12 @@
   flex-direction: column;
 }
 
-/* Top Bar */
-.top-bar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.top-bar-button,
-.logout-button {
-  padding: 10px 20px;
-  margin-inline: 5px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  background-color: #1081c7;
-  color: #fff;
-  transition: background-color 0.3s ease;
-}
-
-.logout-button {
-  background-color: #d9d9d9;
-  color: black;
-  box-shadow: 0 2px 2px rgb(0 0 0 / 30%);
-}
-
-.logout-button:hover {
-  background-color: #bd0000;
-  color: white;
-}
-
-.top-bar-button:hover {
-  background-color: #084f8c;
-}
-
-/* Search Bar */
-.search-bar {
-  display: flex;
-  gap: 10px;
-}
-
-.search-bar div {
-  flex: 1;
-}
-
-.search-bar label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: #333;
-}
-
-.search-bar input,
-.search-bar select {
-  width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 14px;
+h3 {
+  margin-top: 10px;
 }
 
 .listing-boxes {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
-}
-
-/* Pagination */
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: auto;
-
-  /* Pushes the pagination to the bottom */
-  padding: 20px 0;
-
-  /* Adds padding to give some space */
-}
-
-.pagination button {
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  background-color: #1081c7;
-  color: #fff;
-  margin: 0 5px;
-  transition: background-color 0.3s ease;
-}
-
-.pagination button:hover {
-  background-color: #084f8c;
-}
-
-.pagination span {
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  color: #333;
 }
