--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -3,6 +3,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  background-color: #e0e0e0;
 }
 
 .backdrop {
@@ -41,8 +42,8 @@
   padding: 30px;
   border: transparent;
   border-radius: 10px;
-  box-shadow: 0 0 10px var(--primary-color);
-  background-color: var(--background-card);
+  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+  background-color: var(--background-main);
 }
 
 .register-container h2 {
