--- a/src/app/components/top-bar/top-bar.component.css
+++ b/src/app/components/top-bar/top-bar.component.css
@@ -13,21 +13,21 @@
   border-radius: 5px;
   cursor: pointer;
   background-color: #1081c7;
-  color: #fff;
+  background-color: var(--primary-color); /* Use primary-color variable */
+  color: white; /* Use text-primary for button text color */
   transition: background-color 0.3s ease;
 }
 
 .logout-button {
-  background-color: #d9d9d9;
-  color: black;
+  background-color: var(--background-button); /* Use background-button for logout button */
+  color: var(--text-primary); /* Use text-secondary for logout button text */
   box-shadow: 0 2px 2px rgb(0 0 0 / 30%);
 }
 
 .logout-button:hover {
-  background-color: #bd0000;
-  color: white;
+  background-color: #bd0000; /* Retain the red hover effect for emphasis */
 }
 
 .top-bar-button:hover {
-  background-color: #084f8c;
+  background-color: var(--secondary-color); /* Use secondary-color variable for hover */
 }
