--- a/src/app/components/pagination/pagination.component.css
+++ b/src/app/components/pagination/pagination.component.css
@@ -17,18 +17,21 @@
   border-radius: 5px;
   cursor: pointer;
   background-color: #1081c7;
-  color: #fff;
+  background-color: var(--primary-color); /* Use primary-color variable for button background */
+  color: white; /* Use text-primary for button text color */
   margin: 0 5px;
   transition: background-color 0.3s ease;
 }
 
 .pagination button:hover {
-  background-color: #084f8c;
+  background-color: var(--secondary-color); /* Use secondary-color for hover state */
+  color: black;
 }
 
 .pagination span {
   display: flex;
   align-items: center;
   font-size: 16px;
-  color: #333;
+  margin: 10px;
+  color: var(--text-primary); /* Use text-primary for span text color */
 }
