--- a/src/app/pages/my-listings/my-listings.component.css
+++ b/src/app/pages/my-listings/my-listings.component.css
@@ -7,8 +7,14 @@
   flex-direction: column;
 }
 
+#background {
+  background-color: var(--background-card);
+  width: 100%;
+  height: 100%;
+}
+
 #discover-section {
-  background-color: #f9f9f9;
+  background-color: var(--background-main); /* Use background-card variable */
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
@@ -17,7 +23,7 @@
 
 h2 {
   text-align: center;
-  color: #333;
+  color: var(--text-primary); /* Use text-primary variable */
   margin-bottom: 20px;
 }
 
@@ -72,11 +78,11 @@ h2 {
   background: transparent;
   border: none;
   font-size: 16px;
-  color: #333;
+  color: var(--text-primary); /* Use text-primary for button text */
   position: relative;
   cursor: pointer;
 }
 
 .back-button:hover {
-  color: #8b8b8b;
+  color: var(--text-secondary); /* Use text-secondary for hover state */
 }
