--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -16,6 +16,8 @@ h3 {
 
 .listing-boxes {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(280px, 400px));
   gap: 20px;
+  justify-content: center;
+  align-items: center;
 }
