--- a/src/app/components/listing-box/listing-box.component.css
+++ b/src/app/components/listing-box/listing-box.component.css
@@ -16,6 +16,13 @@
   height: 230px;
 }
 
+.like-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  color: rgb(255 0 0 / 75%);
+}
+
 .box:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 8px rgb(0 0 0 / 20%);
