--- a/src/app/pages/my-listings/my-listings.component.css
+++ b/src/app/pages/my-listings/my-listings.component.css
@@ -56,6 +56,11 @@ h2 {
   filter: blur(2px);
 }
 
+.box ::ng-deep .like-icon {
+  opacity: 0;
+  pointer-events: none;
+}
+
 ::ng-deep .p-button {
   width: 80px;
   text-align: center;
