--- a/src/app/pages/data-panel/data-panel.component.css
+++ b/src/app/pages/data-panel/data-panel.component.css
@@ -1,10 +1,9 @@
 #background {
   background-color: var(--background-main);
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
-  place-items: center center;
 }
 
 h2 {
